[fix] argocd image null error 수정